--- a/web/css/flexslider.css
+++ b/web/css/flexslider.css
@@ -38,7 +38,7 @@ html[xmlns] .slides {display: block;}
 
 /* FlexSlider Default Theme
 *********************************/
-.flexslider {margin: 0 auto; margin-bottom: 60px; padding: 0; position: relative; zoom: 1; overflow: hidden;}
+.flexslider { width: 1026px; margin: 0 auto; margin-bottom: 60px; padding: 0; position: relative; zoom: 1; overflow: hidden;}
 .flex-viewport {max-height: 2000px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; transition: all 1s ease;}
 .loading .flex-viewport {max-height: 300px;}
 .flexslider .slides {zoom: 1;}
